<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_lock"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_theme"
        android:icon="@drawable/ic_theme"
        android:title="@string/menu_theme" />

    <item
        android:visible="false"
        android:id="@+id/nav_app_mask"
        android:icon="@drawable/ic_mask"
        android:title="@string/menu_app_mask" />

    <item
        android:id="@+id/nav_advanced_protection"
        android:icon="@drawable/ic_security"
        android:title="@string/advanced_protection" />

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_setting" />
</menu>