<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2D9CFF"
    tools:context=".ui.setting.SetttingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_bgr_container"
        android:backgroundTint="@color/color_f2f2f2"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_sercurity_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_sercurity_question"
            app:inf_show_icon_subcription="true"
            app:inf_title="@string/sercurity_question" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_limit_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_limit_time_lock"
            app:inf_show_icon_subcription="true"
            app:inf_title="@string/limit_lock_time"
            tools:inf_description="always locked" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_change_password"
            app:inf_show_icon_subcription="true"
            app:inf_title="@string/change_password" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_switch_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_switch_password"
            app:inf_show_icon_subcription="true"
            app:inf_title="@string/switch_to_password" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_hide_pattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_hide_pattern_code"
            app:inf_show_switch_check="true"
            app:inf_title="@string/hide_pattern" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_lock_new_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_lock_new_app"
            app:inf_show_switch_check="true"
            app:inf_title="@string/lock_new_app" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_advanced_detection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_security_pro"
            app:inf_show_icon_subcription="true"
            app:inf_title="@string/advanced_detection" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_fingerprint"
            app:inf_show_switch_check="true"
            app:inf_title="@string/finger_unlock" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_intruder_selfie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_intruder_selfie_2"
            app:inf_show_switch_check="true"
            app:inf_title="@string/intruder_selfie" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_language"
            app:inf_show_icon_subcription="true"
            app:inf_title="@string/change_language" />

        <com.security.applock.widget.MenuFunction
            android:id="@+id/func_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:inf_icon="@drawable/ic_rate_func"
            app:inf_show_icon_subcription="true"
            app:inf_title="@string/rate" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>