<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2D9CFF">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/ic_sheild_advanced" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/header_advanced"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_bgr_container"
        android:backgroundTint="@color/color_f2f2f2"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_use_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/take_photos_intruders"
                app:inf_icon_2="@drawable/ic_number_1"
                app:inf_show_icon_subcription="true"
                app:inf_title="@string/used_camera" />

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_stable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/keep_applock_smoothly"
                app:inf_icon_2="@drawable/ic_number_2"
                app:inf_show_icon_subcription="true"
                app:inf_title="@string/stable_operation" />

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_saving"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/saving_extending_pin_life"
                app:inf_icon_2="@drawable/ic_number_3"
                app:inf_show_icon_subcription="true"
                app:inf_title="@string/energy_saving" />

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/keep_applock_background"
                app:inf_icon_2="@drawable/ic_number_3"
                app:inf_show_icon_subcription="true"
                app:inf_title="@string/popup" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
