<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2D9CFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_header_main" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ll_ads">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f2f2f2"
            android:orientation="vertical"
            android:padding="@dimen/_3sdp">

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_proximity_detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/detect_when_remove_pocket"
                app:inf_icon="@drawable/ic_phone_detection"
                app:inf_title="@string/proximily_detection" />

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_motion_detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/detect_when_device_move"
                app:inf_icon="@drawable/ic_motion"
                app:inf_title="@string/motion_detection" />

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_charger_detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/detect_when_charger_disconnect"
                app:inf_icon="@drawable/ic_charger"
                app:inf_title="@string/charger_detection" />

            <com.security.applock.widget.MenuFunction
                android:id="@+id/func_kidzone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:inf_description="@string/child_restricted_area"
                app:inf_icon="@drawable/ic_kidzone"
                app:inf_title="@string/kidzone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/ll_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_f2f2f2"
        app:layout_constraintBottom_toBottomOf="parent">
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>