<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@color/black_70">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_23sdp"
        android:background="@drawable/shape_dialog_bgr"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_language"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/rcv_data"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:listitem="@android:layout/simple_list_item_single_choice" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp">

            <Button
                android:id="@+id/tv_cancel"
                style="@style/TextStyleCustomAccent"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/shape_button_cancel"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_ok"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/tv_ok"
                style="@style/TextStyleCustomAccent"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/shape_button_action"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_cancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
